# scaflow

./: .coveragerc  .flake8  .gitignore  .ignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  mypy.ini  pylint_ignore.py  pyproject.toml
docs/: conf.py  index.rst
examples/: .gitignore  minimal.json  numpyInputs.json  stargate.json  stargate2.json  stargate2_wrong.json
scaflow/: main.py
scaflow/editor/: __init__.py  about_ui.py  edge_widget.py  editor_widget.py  event_handler.py  graphics_scene.py  graphics_view.py  node_tree_widget.py  scaflow_ui.py  zoom_slider.py
scaflow/editor/node_widget/: __init__.py  node_background.py  node_control.py  node_text.py  node_widget.py  socket_widget.py
scaflow/editor/ui_models/: about.ui  icons.qrc  icons_rc.py  main_editor.ui
scaflow/engine/: __init__.py  engine.py
scaflow/graph_nodes/controls/: __init__.py  file_control.py
scaflow/graph_nodes/nodes/: __init__.py  cpa_attack.py
scaflow/model/: __init__.py  connection.py  control.py  dispatcher.py  graph.py  graph_event.py  input_socket.py  node.py  output_socket.py  socket.py  type_hints.py
scaflow/model/base/: __init__.py  connection.py  control.py  function_node.py  input_socket.py  node.py  output_socket.py  socket.py
scaflow/model/controls/: FileControl.py  __init__.py
scaflow/model/nodes/: __init__.py  cpa_attack.py  write_node.py
tests/: test_graph_connection.py  test_graph_model.py  test_graph_node.py  test_graph_serialisation.py
tests/node_tests/: test_ets_trace_node.py  test_npy_trace_node.py
tools/: build_ui.py
(+27 files in other folders)
