[tool.poetry]
name = "scaflow"
homepage = "https://github.com/scarv/scaflow"
version = "0.1.0"
description = ""
authors = ["Fergus Longley <ferguslongley@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
pythonflow = "^0.3.0"
rich = "^9.10.0"
PySide6 = "^6.0.0"
numpy = "^1.20.0"
pytest = "^6.2.2"
scared = "^0.8.13"
matplotlib = "^3.3.4"
pytest-mock = "^3.5.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
mypy = "^0.800"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bugbear = "^20.11.1"
flake8-mypy = "^17.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
